# Cinna-Key-Manager

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  index.css  themes.json
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: userdata.db3
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/theme-info/: themes.json
src/components/: AddForm.tsx  ChangeTheme.tsx  Clock.tsx  DataDetail.tsx  Export.tsx  Import.tsx  NavBarMenu.tsx
src/components/DataCard/: DataDetail.tsx
src/components/NavBar/: ChangeTheme.tsx  NavBarMenu.tsx
src/tests/: keymanager.test.tsx
