[package]
name = "cinna-key-manager"
version = "1.0.1"
description = "This stores your passwords blazingly fast."
authors = ["CinnamonDoe"]
license = "Apache"
repository = "https://github.com/CinnamonDoe/Cinna-Key-Manager.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }
log = "0.4.26"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2.0.0-rc"

rusqlite = "0.33.0"
csv = "1.3.1"
tauri-plugin-fs = "2.2.0"
tauri-plugin-dialog = "2"
magic-crypt = "4.0.1"
